# simple-repo-asyncsqla

./: README.md  pyproject.toml
src/repo/: exceptions.py
src/simple_repository/: __init__.py  _types.py  abctract.py  exceptions.py  factory.py  implementation.py  protocols.py  repository.py  types.py  utils.py
tests/: database.py  test.py
