[project]
name = "simple-repo-asyncsqla"
version = "0.1.2"
description = "simple package for fast and flex crud usage with repository pattern"
readme = "README.md"
authors = [
    { name = "DustGalaxy", email = "103292379+DustGalaxy@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "sqlalchemy[asyncio]>=2.0.41",
]

classifiers = [
  "Development Status :: 4 - Beta",

  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

]

[project.urls]
Homepage = "https://github.com/DustGalaxy/simple-repo-asyncsqla"
Repository = "https://github.com/DustGalaxy/simple-repo-asyncsqla"
Issues = "https://github.com/DustGalaxy/simple-repo-asyncsqla/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_repository"]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pydantic>=2.11.5",
    "pytest>=8.4.0",
]
